fix(styles): add spacing below sessionize-wrapper for better layout spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -222,3 +222,9 @@ p {
   }
 }
 
+@media (max-width: 1280px) {
+  .sessionize-wrapper {
+    margin-bottom: 400px;
+  }
+}
+
